GraphQL, ConfigModule Settings

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,9 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+# ENV Files
+.env
+.dev.env
+.test.env
+.prod.env
