--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,9 +20,10 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
+          cache: 'npm'
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
       - name: Run build
         run: npm run build
 
@@ -38,19 +39,22 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Create env file
-        run: |
-          touch .env
-          echo SERVER_PORT=8081 >> .env
-          echo NODE_ENV=${{ secrets.NODE_ENV }} >> .env
-          echo DB_HOST=${{ secrets.DB_HOST }} >> .env
-          echo DB_USER=${{ secrets.DB_USER }} >> .env
-          echo DB_PSWD=${{ secrets.DB_PSWD }} >> .env
-          echo DB_NAME=${{ secrets.DB_NAME }} >> .env
-          echo PRIVATE_KEY=${{ secrets.PRIVATE_KEY }} >> .env
-          echo AWS_ACCESS_KEY=${{ secrets.AWS_ACCESS_KEY }} >> .env
-          echo AWS_SECRET_KEY=${{ secrets.AWS_SECRET_KEY }} >> .env
-          echo BUCKET=${{ secrets.BUCKET }} >> .env
-          cat .env
+          jq -r 'to_entries|map("\(.key)=\(.value|tostring)")|.[]' <<< "$SECRETS_CONTEXT" > .env
+        env:
+          SECRETS_CONTEXT: ${{ toJson(secrets) }}
+        # run: |
+        #   touch .env
+        #   echo SERVER_PORT=8081 >> .env
+        #   echo NODE_ENV=${{ secrets.NODE_ENV }} >> .env
+        #   echo DB_HOST=${{ secrets.DB_HOST }} >> .env
+        #   echo DB_USER=${{ secrets.DB_USER }} >> .env
+        #   echo DB_PSWD=${{ secrets.DB_PSWD }} >> .env
+        #   echo DB_NAME=${{ secrets.DB_NAME }} >> .env
+        #   echo PRIVATE_KEY=${{ secrets.PRIVATE_KEY }} >> .env
+        #   echo AWS_ACCESS_KEY=${{ secrets.AWS_ACCESS_KEY }} >> .env
+        #   echo AWS_SECRET_KEY=${{ secrets.AWS_SECRET_KEY }} >> .env
+        #   echo BUCKET=${{ secrets.BUCKET }} >> .env
+        #   cat .env
 
       - name: Install Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
@@ -78,7 +82,7 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Generate deployment package
-        run: zip -r deploy.zip . -x '*.git*' './src/*' './aws/*' awscliv2.zip
+        run: zip -r deploy.zip . -x '*.git*' './aws/*' './node_modules/*' './dist/*' awscliv2.zip
 
       - name: Deploy to EB
         uses: einaregilsson/beanstalk-deploy@v14
