--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -37,8 +37,8 @@ jobs:
 
     needs: buildAndTest
     steps:
-      - uses: actions/checkout@v2
       - name: Create env file
+        uses: actions/checkout@v2
           jq -r 'to_entries|map("\(.key)=\(.value|tostring)")|.[]' <<< "$SECRETS_CONTEXT" > .env
         env:
           SECRETS_CONTEXT: ${{ toJson(secrets) }}
