--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,9 +20,22 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+
+      - name: Cache node modules
+        id: node-cache
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-node-modules
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node_modules-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node_modules-
 
       - name: Install dependencies
-        run: npm install
+        if: steps.node-cache.outputs.cache-hit != 'true'
+        run: npm ci
 
       - name: Run build
         run: npm run build
@@ -50,9 +63,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
+          cache: 'npm'
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Run build
         run: npm run build
@@ -72,10 +86,10 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Generate deployment package
-        run: zip -r deploy.zip . -x '*.git*' './aws/*' './node_modules/*' './dist/*' awscliv2.zip
+        run: zip -r blog-server.zip . -x '*.git*' './src/*' './aws/*' './node_modules/*' awscliv2.zip
 
       - name: Deploy to EB
-        uses: einaregilsson/beanstalk-deploy@v14
+        uses: einaregilsson/beanstalk-deploy@v16
         with:
           aws_access_key: ${{ secrets.DEPLOY_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.DEPLOY_SECRET_KEY }}
@@ -83,4 +97,5 @@ jobs:
           environment_name: ${{ secrets.DEPLOY_ENV_NAME }}
           region: ${{ secrets.AWS_REGION }}
           version_label: ${{ github.SHA }}
-          deployment_package: deploy.zip
+          deployment_package: blog-server.zip
+          use_existing_version_if_available: true
