--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -52,6 +52,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Create .npmrc
+        run: |
+          echo "unsafe-perm=true" > .npmrc
+
       - name: Create env file
         run: |
           jq -r 'to_entries|map("\(.key)=\(.value|tostring)")|.[]' <<< "$SECRETS_CONTEXT" > .env
