--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -55,6 +55,7 @@ jobs:
       - name: Create .npmrc
         run: |
           echo "unsafe-perm=true" > .npmrc
+          cat .npmrc
 
       - name: Create env file
         run: |
