--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "graphql": "^16.5.0",
+    "graphql-ws": "^5.11.2",
     "jest": "28.0.3",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
